--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Weather app</title>
   </head>
   <body>
-    <footer>Coded by Daiya Dai</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/Daiyadai" target="_blank">Daiya Dai</a> code
+      hosted on
+      <a href="https://github.com/Daiyadai/weather" target="_blank">Github</a>
+      and website hosted by
+      <a href="https://weatherforecastdaiya.netlify.app/" target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
