updated footer for more readable information

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <footer>
       Coded by
-      <a href="https://github.com/Daiyadai" target="_blank">Daiya Dai</a> code
-      hosted on
+      <a href="https://github.com/Daiyadai" target="_blank">Daiya Dai</a> is
+      open source on
       <a href="https://github.com/Daiyadai/weather" target="_blank">Github</a>
-      and website hosted by
+      and hosted on
       <a href="https://weatherforecastdaiya.netlify.app/" target="_blank"
         >Netlify</a
       >
