--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
         </div>
         <div class="weather-forecast" id="forecast"></div>
       </main>
-      </main>
+
       <footer>
         This project was coded by
-        <a href="https://github.com/Daiyadai" target="_blank">Daiya Dai</a> is
-        open source on
-        <a href="https://github.com/Daiyadai/weather" target="_blank">Github</a>
-        and hosted on
-        <a href="https://weatherforecastdaiya.netlify.app/" target="_blank"
-          >Netlify</a
+        <a href="https://github.com/matthieua/" target="_blank"> Matt Delac</a>,
+        is
+        <a href="https://github.com/matthieua/meteo" target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and
+        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
+          >hosted on Netlify</a
         >
       </footer>
     </div>
